@@ -1,3 +1,7 @@
+2014-07-05  TANAKA Takuji  <KXD02663@nifty.ne.jp>
+
+	* convert.c: Better timing for xstrdup.
+
 2014-06-25  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* main.c: Drop definition of TL_VERSION.
